# incredibuild-mcp-server

./: AGENTS.md  Dockerfile  LICENSE  build_history_mcp.py  build_history_mcp_check.py  main.py  pyproject.toml  readme.md  server.py  test_mcp_server.py
.github/workflows/: release.yaml  test.yaml
testdata/: BuildHistoryDB.db
