[project]
name = "incredibuild-mcp-server"
version = "0.1.0"
description = "MCP server exposing IncrediBuild build history from local SQLite databases"
# readme = "readme.md"  # Omitted to simplify Docker build
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
incredibuild-mcp = "build_history_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["build_history_mcp.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]

